230441100170-WardatusSholicha-Modul2-RachmadAzizFazarikha

--- a/modul-1/230441100170_Wardatus Sholicha/form.html
+++ b/modul-1/230441100170_Wardatus Sholicha/form.html
@@ -21,8 +21,8 @@
         <input type="radio" name="jk"> Wanita
     
         <p>Pilih  Pendidikan :</p>
-        <input type="radio" > S1 Sistem Informasi <br>
-        <input type="radio" > S1 Teknik Informatika <br>
+        <input type="radio" name="pd"> S1 Sistem Informasi <br>
+        <input type="radio" name="pd"> S1 Teknik Informatika <br>
         <input type="radio" name="pd"> S1 Teknik Industri <br>
         <input type="radio" name="pd"> S1 Teknik Mesin <br>
         <input type="radio" name="pd"> S1 Teknik Mekatro <br>
